# caliper_keyboard

./: CALIPER_BOM_TOOLS.md  CALIPER_LEVEL_SHIFTER.md  CALIPER_MODS.md  CMakeLists.txt  LICENSE  README.md  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  prj.conf
boards/arm/nrf52840_caliper/: Kconfig  Kconfig.board  Kconfig.defconfig  nrf52840_caliper-pinctrl.dtsi  nrf52840_caliper.dts  nrf52840_caliper.yaml  nrf52840_caliper_defconfig
docs/: Caliper_BLE_Adapter_BOM_R14_Cost_10Jun2023.xlsx
docs/Caliper_Case/FreeCAD-files/: battery_door_proto2.FCStd  battery_top_wBat_assy3.FCStd  box_bottom_proto11.FCStd  box_top_proto2.FCStd
docs/Caliper_Case/stl-files/: battery_door_proto2.stl  battery_top_wBat_assy3.stl  box_bottom_proto11.stl  box_top_proto2.stl
dts/bindings/buzzer/: pwm-buzzer.yaml
dts/bindings/caliper/: caliper.yaml
images/: caliper_keyboard_overview.odg
inc/: app_uicr.h  ascii2hid.h  battery.h  battery_def.h  ble_alt.h  ble_base.h  buttons.h  buzzer.h  caliper.h  caliper_gpio.h  events.h  framer.h  keyboard.h  main.h  nus.h  shell.h  shell_bt_nus.h  tones.h  watchdog.h
src/: app_uicr.c  ascii2hid.c  battery.c  ble_alt.c  ble_base.c  buttons.c  buzzer.c  caliper.c  events.c  framer.c  keyboard.c  main.c  nus.c  shell.c  shell_bt_nus.c  tones.c  watchdog.c
